--- a/.gitignore
+++ b/.gitignore
@@ -97,7 +97,7 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-
+.idea
 .idea/codeStyles/
 .idea/demo-api.iml
 .idea/modules.xml
