--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    server_name localhost;
     charset UTF-8;
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
