--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,66 +1,57 @@
-  version: "3"
-  services:
+version: "3.7"
+services:
+  app:
+    build:
+      args:
+        user: sammy
+        uid: 1000
+      context: ./
+      dockerfile: Dockerfile
+    image: travellist
+    container_name: api-app
+    restart: unless-stopped
+    working_dir: /var/www/
+    volumes:
+      - ./:/var/www
+    networks:
+      - travellist
 
-  #PHP Service
-    app:
-      build:
-        context: .
-        dockerfile: Dockerfile
-      image: digitalocean.com/php
-      container_name: demoApiLaravel
-      restart: unless-stopped
-      tty: true
+  db:
+    image: mysql:5.7
+    container_name: api-db
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_USER: ${DB_USERNAME}
+      SERVICE_TAGS: dev
+      SERVICE_NAME: mysql
+    volumes:
+      - ./docker/mysql:/docker-entrypoint-initdb.d
+    networks:
+      - travellist
+
+  adminer:
+      image: adminer:latest
       environment:
-        SERVICE_NAME: app
-        SERVICE_TAGS: dev
-      working_dir: /var/www
-      volumes:
-        - ./src:/var/www
-        - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
-      networks:
-        - app-network
-
-    #Nginx Service
-    webserver:
-      image: nginx:alpine
-      container_name: demoApiNginx
-      restart: unless-stopped
-      tty: true
+        ADMINER_DEFAULT_SERVER: mysql_db_container
       ports:
-        - "80:80"
-        - "443:443"
-      volumes:
-        - ./src/:/var/www
-        - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
-        - ./docker/nginx/log:/var/log/nginx/
-      networks:
-        - app-network
+        - 8080:8080
 
-    #MySQL Service
-    db:
-      image: mysql:5.7.22
-      container_name: demoApiMySql
+  nginx:
+      image: nginx:1.18-alpine
+      container_name: api-nginx
       restart: unless-stopped
-      tty: true
       ports:
-        - "3306:3306"
-      environment:
-        MYSQL_DATABASE: laravel
-        MYSQL_ROOT_PASSWORD: 123456
-        SERVICE_TAGS: dev
-        SERVICE_NAME: mysql
+        - 8000:80
       volumes:
-        - ./docker/mysql/data:/var/lib/mysql
-        - ./docker/mysql/my.cnf:/etc/mysql/my.cnf
+        - ./:/var/www
+        - ./docker/nginx/conf.d:/etc/nginx/conf.d
+        - ./docker/nginx/log:/var/log/nginx
       networks:
-        - app-network
-
-#Docker Networks
-  networks:
-    app-network:
-      driver: bridge
-
-  #Volumes
-  volumes:
-    dbdata:
-      driver: local
+        - travellist
+      command: nginx -g "daemon off;"
+networks:
+  travellist:
+    driver: bridge
