--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,6 +1,8 @@
 server {
-    listen 80;
+    listen 80 default_server;
+    listen [::]:80 default_server;
     server_name localhost;
+
     charset UTF-8;
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
