--- a/docker/mysql/my.cnf
+++ b/docker/mysql/my.cnf
@@ -1,3 +1,7 @@
 [mysqld]
 general_log = 1
 general_log_file = /var/lib/mysql/general.log
+collation-server = utf8_unicode_ci
+init-connect='SET NAMES utf8'
+character-set-server = utf8
+default-time-zone='+03:00'
